[project]
name = "echoagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "google-genai>=2.6.0",
    "python-dotenv>=1.2.2",
    "sarvamai>=0.1.28",
    "streamlit>=1.57.0",
    "youtube-transcript-api>=1.2.4",
    "yt-dlp>=2026.3.17",
]
